# QuicServe

./: Cargo.toml  LICENSE  README.md  build.rs
.devcontainer/: devcontainer.json
benches/: benchmarks.rs
examples/: rpc_client.rs  rpc_server.rs  server.rs
quikserve-cli/: Cargo.toml
quikserve-cli/src/: main.rs
scripts/: generate_certificates.sh
src/: client.rs  config.rs  error.rs  lib.rs  proto.rs  server.rs  transport.rs  utils.rs
src/bindings/: mod.rs  node.rs  php.rs  python.rs
src/grpc/: services.rs
src/protos/: service.proto
src/quic/: transport.rs
tests/ffi/: php_test.php  python_test.py
