[package]
name = "QuicServe"
version = "0.1.0"
edition = "2024"
authors = ["Aashish BishowKarma <aashishbishowkarma@outlook.com>"]
description = "High-Performance RPC(Remote Procedure Call) system built on top of WebTransport over HTTP/3 QUIC"
repository = "www.github.com/aashishbishowkarma/quicserve"
license = "MIT"
keywords = ["rpc","remote-procedure-call", "quic", "webtransport", "http3"]
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/quicserve"
homepage = "https://quicserve.rs"

[dependencies]
# Networking
# QUIC Transport
quinn = "0.11.6"

# HTTP/3
h3 = "0.0.6"

# WebTransport
h3-webtransport = "0.1.0"
futures-util = "0.3.31"

async-trait = "0.1.87"
# TLS
rustls = "0.23.23"
# aws-lc-sys ="0.27.0"

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prost = "0.13.5"
bytes = "1.10.1"

# Error Handling
thiserror = "2.0.12"
anyhow = "1.0.97"

# Async Runtime
tokio = { version = "1.44.0", features = ["full"] }

# Parallelism
rayon = "1.10.0"

# Command Line Parsing
clap = "4.5.32"

# FFI support
libc = "0.2.171"    
cbindgen = "0.28.0"
pyo3 = { version = "0.24.0", features = ["extension-module"] }
wasm-bindgen = "0.2.100"
# extendr-api = "0.7.1"
uniffi = "0.29.0"

# Utilities
log = "0.4.26"
uuid = { version = "1.15.1", features = ["v4"] }


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "quicserve"
path = "src/bin/quicserve.rs"

[workspace]



[profile.dev]
opt-level = 2
debug = true

[profile.release]
opt-level = 3
Ito = 3

[build-dependencies]
cbindgen = "0.28.0"
prost-build = "0.13.5"

[dev-dependencies]
tokio-test = "0.4.4"
env_logger = "0.11.7"
anyhow = "1.0.97"
assert_cmd = "2.0.16"